--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html dir=ltr lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- comment -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", viewport-fit="cover">
     <title>Homepage - Techium</title>
     <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
 </head>
 <body>
 </body>
