--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
-    <title>Homepage - Techium</title>
+    <title>Article - Techium</title>
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="icon" type="image/png" href="./favicon.png" />
@@ -11,6 +11,7 @@
 <body>
     <header>Header</header>
     <main>Main content</main>
+    <aside>Aside</aside>
     <footer>Footer</footer>
 </body>
 </html>
